--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   ,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon .",
+    "start": "node .",
     "dev": "nodemon . "
   },
   "keywords": [],
