updating gitignore file

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,8 +1,8 @@
 
 # Ignore the node_modules folder
-backend/node_modules/
+node_modules
 
 # Ignore the .env file
-backend/.env
-backend/.env.local
+.env
+.env.local
 
